@@ -41,7 +41,7 @@ public interface SecureCredentialsVault {
         PKCS12;
     }
     public static final Logger LOG = LoggerFactory.getLogger(SecureCredentialsVault.class);
-    public final static String SCV_KEYSTORE_PROPERTY = "org.opennms.features.scv.keystore.type";
+    public final static String SCV_KEYSTORE_TYPE_PROPERTY = "org.opennms.features.scv.keystore.type";
     public static final String OPENNMS_PROPERTIES_D_NAME = "opennms.properties.d";
     public static final String OPENNMS_PROPERTIES_NAME = "opennms.properties";
     public static final String KEYSTORE_KEY_PROPERTY = "org.opennms.features.scv.jceks.key";
@@ -59,14 +59,12 @@ public interface SecureCredentialsVault {
     public static Properties loadScvProperties(String opennmsHome) {
 
         final Properties onmsProperties = new Properties();
-        String keyStoreTypeSp = System.getProperty(SCV_KEYSTORE_PROPERTY);
-        if(keyStoreTypeSp !=null && !keyStoreTypeSp.isEmpty()){
-            onmsProperties.setProperty(SCV_KEYSTORE_PROPERTY, keyStoreTypeSp);
-        } else {
-            if (opennmsHome != null && !opennmsHome.isEmpty()) {
-                loadProperties(Path.of(opennmsHome, "etc", OPENNMS_PROPERTIES_D_NAME).toString(), onmsProperties);
-                loadProperties(Path.of(opennmsHome, "etc", OPENNMS_PROPERTIES_NAME).toString(), onmsProperties);
-            }
+        String keyStoreType = System.getProperty(SCV_KEYSTORE_TYPE_PROPERTY);
+        if (keyStoreType !=null && !keyStoreType.isEmpty()) {
+            onmsProperties.setProperty(SCV_KEYSTORE_TYPE_PROPERTY, keyStoreType);
+        } else if (opennmsHome != null && !opennmsHome.isEmpty()) {
+            loadProperties(Path.of(opennmsHome, "etc", OPENNMS_PROPERTIES_D_NAME).toString(), onmsProperties);
+            loadProperties(Path.of(opennmsHome, "etc", OPENNMS_PROPERTIES_NAME).toString(), onmsProperties);
         }
 
         return onmsProperties;
