@@ -61,7 +61,7 @@ public class PKCS12SecureCredentialVaultTest{
     @Before
     public void setUp() {
         System.setProperty("karaf.etc", tempFolder.getRoot().getAbsolutePath());
-        System.setProperty(SecureCredentialsVault.SCV_KEYSTORE_PROPERTY, SCV_KEYSTORE_TYPE);
+        System.setProperty(SecureCredentialsVault.SCV_KEYSTORE_TYPE_PROPERTY, SCV_KEYSTORE_TYPE);
     }
 
     @Test
